fixed with delim (', ')

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nwith requests.Session() as main_session:\\n   city_state_abbr = \\'raleigh-nc/\\' #*****change this city to what you want*****\\n   url = \\'https://www.zillow.com/\\' + city_state_abbr\\n   main_request = main_session.get(url, headers=request_headers)\\n\\n# After finding urls from the main page, use those links to open homedetaills page\\nwith requests.Session() as branch_session:\\n    branch_base_url = \"https://www.zillow.com/homedetails/\"\\n    branch_sub_url = \"5904-Endsley-Ct-Raleigh-NC-27610/65332868_zpid/\"\\n\\n    branch_request = branch_session.get(branch_base_url + branch_sub_url, headers=request_headers)\\n\\nbranch_soup = BeautifulSoup(branch_request.content, \"html.parser\")'"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's not use context managers for now?\n",
     "\"\"\"\n",
@@ -38,16 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18\n",
-      "{}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'#add contents of urls to soup variable from each url\\nmain_request_soup = BeautifulSoup(main_request.content, \"html.parser\")\\n\\n# From intial queried page (e.g., homes in Raleigh) find all links to homedetails page,\\n# which will have more detailed information on the home.\\n\\n# This will be the main base where the scraper will come back to after scraping each\\n# home details page. \\n\\n# Example: queried page -> homedetails page -> scrape data -> queried page \\n# Loop until all homes are scraped, then proceed to next page.\\nhomedetails_urls_list = main_request_soup.find_all(href=re.compile(\"homedetails\"))\\n# homedetails_urls_list = main_request_soup.select(\\'a[href^=\"https://www.zillow.com/homedetails/\"]\\')\\n\\nprint(len(homedetails_urls_list))\\nprint(main_request.links)'"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -71,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +104,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'2708-Boxelder-Ct-Raleigh-NC-27610/6485797', '2108-Ramseur-St-Raleigh-NC-27610/6398826', '3204-Plaza-Pl-Raleigh-NC-27612/6515233', '3528-Dewing-Dr-Raleigh-NC-27616/6563121', '11905-Straight-A-Way-Ln-Raleigh-NC-27613/6441712', '8631-Neuse-Club-Ln-APT-108-Raleigh-NC-27616/132294843', '2613-Elmhurst-Cir-Raleigh-NC-27610/6378853', '1621-Whittington-Dr-Raleigh-NC-27614/6545184', '8308-Grey-Abbey-Pl-Raleigh-NC-27615/6493189', '5412-Seafarer-Ct-Raleigh-NC-27613/6553583', '4813-Abundance-Ave-Raleigh-NC-27616/336869352', '4800-Patton-Ridge-Ct-Raleigh-NC-27612/60535350', '10316-20th-Rd-Raleigh-NC-27603/132205062', '8010-Upper-Lake-Dr-Raleigh-NC-27615/120875871', '12600-Old-Creedmoor-Rd-Raleigh-NC-27613/6466276', '1616-Wynne-Trace-Ct-Raleigh-NC-27603/119341893', '3008-Dawnbrook-Dr-Raleigh-NC-27604/53461261', '11301-Dunleith-Dr-Raleigh-NC-27614/6479003', '2618-Masonboro-Ct-2618-Raleigh-NC-27604/2084168050', '4300-Camelot-Dr-Raleigh-NC-27609/6435731', '7800-Foxwood-Dr-Raleigh-NC-27615/6472689', '125-Trails-End-Ct-Raleigh-NC-27614/6492897', '4306-Timberwood-Dr-Raleigh-NC-27612/6493671', '4601-Landover-Woods-Ln-Raleigh-NC-27616/65333576', '3208-Planet-Dr-Raleigh-NC-27604/50109171', '4105-Crowfield-Dr-Raleigh-NC-27610/53459623', '5920-Dunbarton-Way-Raleigh-NC-27613/6515529', '5901-Rivercliff-Ct-Raleigh-NC-27610/65332932', '1415-Beacon-Village-Dr-Raleigh-NC-27604/6558186', '2717-Hiking-Trl-Raleigh-NC-27615/6495378', '4221-Laurel-Ridge-Dr-Raleigh-NC-27612/6428993', '5904-Endsley-Ct-Raleigh-NC-27610/65332868', '1908-Jupiter-Hills-Ct-Raleigh-NC-27604/6530660', '4725-Royal-Troon-Dr-Raleigh-NC-27604/6524599', '8801-Wildwood-Links-Raleigh-NC-27613/6495515', '11308-Derby-Ln-Raleigh-NC-27613/6441812', '906-Brooks-Ave-Raleigh-NC-27607/6426706', '4216-Loon-Ln-Raleigh-NC-27616/6505225', '4209-Willow-Lake-Rd-Raleigh-NC-27616/6547491', '12816-Beech-Wood-Ct-Raleigh-NC-27614/6447463'}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "main_re_search = set(re.findall(\"https://www.zillow.com/homedetails/(.+?)_zpid\", str(main_request.content)))\n",
     "#re_search_set = set(main_re_search) # Set creates unique list - could change this in future if needed.\n",
-    "#print(main_re_search)\n"
+    "print(main_re_search)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,10 +157,37 @@
     "    \n",
     "    return full_url_list\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "print(get_full_url_branch(main_re_search))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 43.3s\n",
+    "def get_branch_request(full_url_list):\n",
+    "\n",
+    "    branch_response_good_soup_list = []\n",
+    "\n",
+    "    for url in full_url_list:\n",
+    "        branch_response = requests.get(url, headers=request_headers)\n",
+    "        branch_response_good_soup = BeautifulSoup(branch_response.content, \"html.parser\")\n",
+    "        branch_response_good_soup_list.append(branch_response_good_soup)\n",
+    "\n",
+    "    return branch_response_good_soup_list\n",
+    "\n",
+    "#print(get_branch_request(get_full_url_branch(main_re_search)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_var = (get_branch_request(get_full_url_branch(main_re_search)))"
    ]
   },
   {
@@ -148,99 +196,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 43.3s\n",
-    "def get_branch_request(full_url_list):\n",
-    "\n",
-    "    for url in full_url_list[:5]:\n",
-    "        branch_response = requests.get(url, headers=request_headers)\n",
-    "        print(branch_response.content)\n",
-    "\n",
-    "print(get_branch_request(get_full_url_branch(main_re_search)))"
+    "print(test_var[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_var_2 = scrape_homedetails(test_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a function that goes into the homedetails branch url and grabs\n",
+    "# Price, beds, baths, sqft, days on zillow, views, and saves\n",
+    "\n",
+    "def scrape_homedetails(branch_homedetails_url_list):\n",
+    "    \"\"\"\n",
+    "    Scrape the homedetails url for price, beds, baths, \n",
+    "    sqft, days on zillow, views, and saves\n",
+    "    \"\"\"\n",
+    "\n",
+    "    page_scraped_data_list = []\n",
+    "\n",
+    "    for soup in branch_homedetails_url_list:\n",
+    "        # Raw soups to be used below\n",
+    "        raw_price_soup = soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\")\n",
+    "        #raw_bed_soup = soup.find_all(\"strong\")\n",
+    "        raw_address_soup = soup.find(\"h1\")\n",
+    "\n",
+    "        # Price\n",
+    "        raw_price_soup = str(soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\"))\n",
+    "        price_match_object = re.search(\"<span>(.+?)</span>\", raw_price_soup)\n",
+    "        price = price_match_object.group(1)\n",
+    "\n",
+    "        # Attributes list: 0 Bed, 1 bath,  2 sqft, 3 days on zillow, 5 views, 6 saves\n",
+    "        raw_bed_soup = str(soup.find_all(\"strong\"))\n",
+    "        raw_bed_soup_list = raw_bed_soup.split(', ')\n",
+    "\n",
+    "        \n",
+    "        count_beds = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[0]).group(1)\n",
+    "        count_baths = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[1]).group(1)\n",
+    "        sq_ft = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[2]).group(1)\n",
+    "        days_on_zillow = re.search(\"<strong>(.+?)\", raw_bed_soup_list[3]).group(1)\n",
+    "        count_views = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[4]).group(1)\n",
+    "        count_saves = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[5]).group(1)\n",
+    "\n",
+    "        # Done\n",
+    "        address = str(raw_address_soup)\n",
+    "        address_1 = re.search(\"kHeRng(.+?)<!--\", address).group(1)[2:]\n",
+    "        address_2 = re.search(\"<!-- -->(.+?)</h1>\", address).group(1)[9:]\n",
+    "        address_full = address_1 + ' ' + address_2\n",
+    "\n",
+    "        # Aggregate into list\n",
+    "        aggregate_list = [address_full, price, count_beds, count_baths, sq_ft, days_on_zillow,\n",
+    "                        count_views, count_saves]\n",
+    "\n",
+    "        page_scraped_data_list.append(aggregate_list)\n",
+    "    \n",
+    "    return page_scraped_data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5904 Endsley Ct, Raleigh, NC 27610', '$352,000', '3', '3', '1,566', '1', '4,379', '247']\n"
+      "[<strong>4</strong>,\n",
+      "<strong>3</strong>,\n",
+      "<strong>1,900</strong>,\n",
+      "<strong>8\n",
+      "days</strong>,\n",
+      "<strong>3,164</strong>,\n",
+      "<strong>226</strong>,\n",
+      "<strong>FRI</strong>,\n",
+      "<strong>SAT</strong>,\n",
+      "<strong>SUN</strong>,\n",
+      "<strong>MON</strong>]\n",
+      "11\n",
+      "<class 'list'>\n",
+      "3,164\n"
      ]
     }
    ],
    "source": [
-    "# Create a function that goes into the homedetails branch url and grabs\n",
-    "# Price, beds, baths, sqft, days on zillow, views, and saves\n",
+    "omg = str(test_var[1].find_all(\"strong\"))\n",
+    "#print(str(test_var[0].find_all(\"strong\")).split(' '))\n",
+    "omg = omg.split(' ')\n",
     "\n",
-    "# branch_homedetails_url = \"https://www.zillow.com/homedetails/2717-Hiking-Trl-Raleigh-NC-27615/6495378_zpid/\"\n",
+    "for i in omg:\n",
+    "    print(i)\n",
     "\n",
-    "# Replaced with regular expression re?\n",
-    "# Find all sections from main_soup that have homedetails. This will be used to get homedetails urls\n",
-    "def find_all_keyword_units(keyword=\"homedetails\"):\n",
-    "    \"\"\"Returns a list of keyword matches\"\"\"\n",
-    "    keyword_match_list = main_request_soup.find_all(href=re.compile(str(keyword)))\n",
-    "    return keyword_match_list\n",
+    "print(len(omg))\n",
+    "print(type(omg))\n",
     "\n",
-    "# Replaced with re?\n",
-    "# Create function to take list and return pruned list including only urls for homedetails\n",
-    "def strip_list_to_url(html_list, index=5):\n",
-    "    \"\"\"Takes keyword soup search, parses it into a list, and selects the homedetails url\"\"\"\n",
-    "    list_to_str = str(html_list)\n",
-    "    href_url = list_to_str.split(' ')[index] # Selects index of href with housedetails\n",
-    "    href_url_strip = href_url.replace(\"href=\",\"\")\n",
-    "    href_url_strip = href_url_strip.replace('\"','')\n",
-    "    return href_url_strip\n",
-    "\n",
-    "\n",
-    "def scrape_homedetails(branch_homedetails_url):\n",
-    "    \"\"\"\n",
-    "    Scrape the homedetails url for price, beds, baths, \n",
-    "    sqft, days on zillow, views, and saves\n",
-    "    \"\"\"\n",
-    "    # Raw soups\n",
-    "    raw_price_soup = branch_response_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\")\n",
-    "    raw_bed_soup = branch_response_soup.find_all(\"strong\")\n",
-    "    raw_address_soup = branch_response_soup.find(\"h1\")\n",
-    "\n",
-    "    # Price\n",
-    "    raw_price_soup = str(branch_response_soup.find_all(\"span\", class_ = \"Text-c11n-8-73-0__sc-aiai24-0 dpf__sc-1me8eh6-0 kGdfMs fzJCbY\"))\n",
-    "    price_match_object = re.search(\"<span>(.+?)</span>\", raw_price_soup)\n",
-    "    price = price_match_object.group(1)\n",
-    "\n",
-    "    # Attributes list: 0 Bed, 1 bath,  2 sqft, 3 days on zillow, 5 views, 6 saves\n",
-    "    raw_bed_soup = str(branch_response_soup.find_all(\"strong\"))\n",
-    "    raw_bed_soup_list = raw_bed_soup.split(' ')\n",
-    "    # Attributes\n",
-    "    count_beds = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[0]).group(1)\n",
-    "    count_baths = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[1]).group(1)\n",
-    "    sq_ft = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[2]).group(1)\n",
-    "    days_on_zillow = re.search(\"<strong>(.+?)\", raw_bed_soup_list[3]).group(1)\n",
-    "    count_views = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[5]).group(1)\n",
-    "    count_saves = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[6]).group(1)\n",
-    "\n",
-    "    # Done\n",
-    "    address = str(raw_address_soup)\n",
-    "    address_1 = re.search(\"kHeRng(.+?)<!--\", address).group(1)[2:]\n",
-    "    address_2 = re.search(\"<!-- -->(.+?)</h1>\", address).group(1)[9:]\n",
-    "    address_full = address_1 + ' ' + address_2\n",
-    "\n",
-    "    # Aggregate into list\n",
-    "    aggregate_list = [address_full, price, count_beds, count_baths, sq_ft, days_on_zillow,\n",
-    "                      count_views, count_saves]\n",
-    "    \n",
-    "    return aggregate_list\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(scrape_homedetails(strip_list_to_url(find_all_keyword_units())))"
+    "count_views = re.search(\"<strong>(.+?)</strong>\", omg[5]).group(1)\n",
+    "print(count_views)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2108 Ramseur St, Raleigh, NC 27610', '$449,900', '4', '3', '1,900', '8', '3,164', '226']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_scrape = scrape_homedetails(test_var)\n",
+    "print(test_scrape[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +407,30 @@
     "# Simply testing function, can remove\n",
     "test_output = find_all_keyword_units(keyword = \"homedetails\")\n",
     "print(test_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replaced with regular expression re?\n",
+    "# Find all sections from main_soup that have homedetails. This will be used to get homedetails urls\n",
+    "def find_all_keyword_units(keyword=\"homedetails\"):\n",
+    "    \"\"\"Returns a list of keyword matches\"\"\"\n",
+    "    keyword_match_list = main_request_soup.find_all(href=re.compile(str(keyword)))\n",
+    "    return keyword_match_list\n",
+    "\n",
+    "# Replaced with re?\n",
+    "# Create function to take list and return pruned list including only urls for homedetails\n",
+    "def strip_list_to_url(html_list, index=5):\n",
+    "    \"\"\"Takes keyword soup search, parses it into a list, and selects the homedetails url\"\"\"\n",
+    "    list_to_str = str(html_list)\n",
+    "    href_url = list_to_str.split(' ')[index] # Selects index of href with housedetails\n",
+    "    href_url_strip = href_url.replace(\"href=\",\"\")\n",
+    "    href_url_strip = href_url_strip.replace('\"','')\n",
+    "    return href_url_strip"
    ]
   },
   {
