--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -238,7 +238,7 @@
     "\n",
     "        # Attributes list: 0 Bed, 1 bath,  2 sqft, 3 days on zillow, 5 views, 6 saves\n",
     "        raw_bed_soup = str(soup.find_all(\"strong\"))\n",
-    "        raw_bed_soup_list = raw_bed_soup.split(', ')\n",
+    "        raw_bed_soup_list = raw_bed_soup.split(', ') # Holy balls spent 4 hours on this.\n",
     "\n",
     "        \n",
     "        count_beds = re.search(\"<strong>(.+?)</strong>\", raw_bed_soup_list[0]).group(1)\n",
