began data transformation

--- a/data_exploration/zillow_scraper.ipynb
+++ b/data_exploration/zillow_scraper.ipynb
@@ -239,6 +239,234 @@
     "zillow_df.shape\n",
     "zillow_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address_full</th>\n",
+       "      <th>price</th>\n",
+       "      <th>count_beds</th>\n",
+       "      <th>count_baths</th>\n",
+       "      <th>sq_ft</th>\n",
+       "      <th>days_on_zillow</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state_zip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4221 Laurel Ridge Dr, Raleigh, NC 27612</td>\n",
+       "      <td>$1,395,000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2,128</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4221 Laurel Ridge Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4800 Patton Ridge Ct, Raleigh, NC 27612</td>\n",
+       "      <td>$929,000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3,644</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4800 Patton Ridge Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3008 Dawnbrook Dr, Raleigh, NC 27604</td>\n",
+       "      <td>$415,000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,775</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3008 Dawnbrook Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1415 Beacon Village Dr, Raleigh, NC 27604</td>\n",
+       "      <td>$299,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,076</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1415 Beacon Village Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5901 Rivercliff Ct, Raleigh, NC 27610</td>\n",
+       "      <td>$375,000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,200</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5901 Rivercliff Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>829 Mill Greens Ct, Raleigh, NC 27609</td>\n",
+       "      <td>$434,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,666</td>\n",
+       "      <td>1</td>\n",
+       "      <td>829 Mill Greens Ct</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>2441 Campus Shore Dr #212, Raleigh, NC 27606</td>\n",
+       "      <td>$459,900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,062</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2441 Campus Shore Dr #212</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>1908 Garner Glen Dr, Raleigh, NC 27603</td>\n",
+       "      <td>$489,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2,686</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1908 Garner Glen Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>808 Richmond St, Raleigh, NC 27609</td>\n",
+       "      <td>$1,699,000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3,832</td>\n",
+       "      <td>4</td>\n",
+       "      <td>808 Richmond St</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>780</th>\n",
+       "      <td>7905 Dukes Dynasty Dr, Raleigh, NC 27615</td>\n",
+       "      <td>$390,000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1,760</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7905 Dukes Dynasty Dr</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>NC 27615</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>781 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     address_full       price count_beds  \\\n",
+       "0         4221 Laurel Ridge Dr, Raleigh, NC 27612  $1,395,000          2   \n",
+       "1         4800 Patton Ridge Ct, Raleigh, NC 27612    $929,000          5   \n",
+       "2            3008 Dawnbrook Dr, Raleigh, NC 27604    $415,000          4   \n",
+       "3       1415 Beacon Village Dr, Raleigh, NC 27604    $299,900          3   \n",
+       "4           5901 Rivercliff Ct, Raleigh, NC 27610    $375,000          4   \n",
+       "..                                            ...         ...        ...   \n",
+       "776         829 Mill Greens Ct, Raleigh, NC 27609    $434,900          3   \n",
+       "777  2441 Campus Shore Dr #212, Raleigh, NC 27606    $459,900          3   \n",
+       "778        1908 Garner Glen Dr, Raleigh, NC 27603    $489,000          3   \n",
+       "779            808 Richmond St, Raleigh, NC 27609  $1,699,000          5   \n",
+       "780      7905 Dukes Dynasty Dr, Raleigh, NC 27615    $390,000          3   \n",
+       "\n",
+       "    count_baths  sq_ft days_on_zillow                    address      city  \\\n",
+       "0             2  2,128              3       4221 Laurel Ridge Dr   Raleigh   \n",
+       "1             5  3,644              5       4800 Patton Ridge Ct   Raleigh   \n",
+       "2             3  2,775              2          3008 Dawnbrook Dr   Raleigh   \n",
+       "3             2  1,076              8     1415 Beacon Village Dr   Raleigh   \n",
+       "4             3  2,200              5         5901 Rivercliff Ct   Raleigh   \n",
+       "..          ...    ...            ...                        ...       ...   \n",
+       "776           3  1,666              1         829 Mill Greens Ct   Raleigh   \n",
+       "777           2  1,062              2  2441 Campus Shore Dr #212   Raleigh   \n",
+       "778           3  2,686              6        1908 Garner Glen Dr   Raleigh   \n",
+       "779           5  3,832              4            808 Richmond St   Raleigh   \n",
+       "780           4  1,760              2      7905 Dukes Dynasty Dr   Raleigh   \n",
+       "\n",
+       "     state_zip  \n",
+       "0     NC 27612  \n",
+       "1     NC 27612  \n",
+       "2     NC 27604  \n",
+       "3     NC 27604  \n",
+       "4     NC 27610  \n",
+       "..         ...  \n",
+       "776   NC 27609  \n",
+       "777   NC 27606  \n",
+       "778   NC 27603  \n",
+       "779   NC 27609  \n",
+       "780   NC 27615  \n",
+       "\n",
+       "[781 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zillow_df[[\"address\", \"city\", \"state_zip\"]] = zillow_df[\"address_full\"].str.split(',', expand=True)\n",
+    "zillow_df"
+   ]
   }
  ],
  "metadata": {
